<resources>
    <string name="app_name">To-Do List</string>
    <string name="app_name_long">Privacy Friendly To-Do List</string>
    <string name="initial_alert">CLICK + FOR NEW LIST</string>
    <string name="second_alert">ADD NEW TASK ></string>
    <string name="nav_header_app_name">To-Do</string>
    <string name="toolbar_title_main">To-Do</string>
    <string name="todos">To-Do\'s</string>
    <string name="home">All tasks</string>
    <string name="calendar_view">Calendar</string>
    <string name="show_all_tasks">Show all tasks</string>
    <string name="settings">Settings</string>
    <string name="other">Other</string>
    <string name="help">Help</string>
    <string name="menu_about">About</string>
    <string name="search">Search</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="name">Name</string>
    <string name="todo_list_description_hint">Description</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="select_option">Select option</string>
    <string name="high_priority">High</string>
    <string name="medium_priority">Medium</string>
    <string name="low_priority">Low</string>
    <string name="unknown_priority">Unknown Priority</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="help_overview_heading">General Information</string>
    <string name="help_intro">The Privacy Firendly To-Do List can be used to keep outstanding tasks in mind and organize a personal schedule.</string>
    <string name="help_group_lists">Task management</string>
    <string name="help_todo_lists_title">To-Do lists</string>
    <string name="help_todo_lists">A To-Do list is a group of tasks and can be created using the + button in the toolbar. The lists appear in the navigation menu and can be called there. Tasks inside a To-Do list can be checked, edited and deleted.</string>
    <string name="help_subtasks_title">Subtasks</string>
    <string name="help_subtasks">Subtasks can be attached to a task to represent smaller steps to accomplish it. They can be created by tapping on a task when viewing a single list.</string>
    <string name="help_deadline_reminder_title">Deadlines and reminders</string>
    <string name="help_deadline_reminder">Deadlines and reminders can only be created for tasks. You can either specify them while creating a task, or while editing it. Hold on a task for a while to edit it.</string>
    <string name="help_group_app">Settings</string>
    <string name="help_pin_title">Settings</string>
    <string name="help_pin">Open the settings menu to setup a PIN protection for your application. The PIN must be a number with at least 4 digits. You are asked for it every time you start the application.</string>
    <string name="help_sound">Moreover you can choose if a notification sound should be played by receiving a notification.</string>
    <string name="help_group_privacy">Privacy Info</string>
    <string name="help_permissions_title">Permission RECEIVE_BOOT_COMPLETED</string>
    <string name="help_permissions">Permission RECEIVE_BOOT_COMPLETED: This permission allows the app to check right after booting of the device if the user wants to get informed about an upcoming deadline. Tracking, advertisement or other permissions do not exist.</string>
    <string name="help_widget">In addition, this app provides a widget that you can add to your homescreen. The widget presents you tasks that belong to a chosen list. Clicking on a task leads you to the main view of the app. The synchronize button can update the list of tasks shown.</string>
    <string name="about">About</string>
    <string name="version_number">Version v%s</string>
    <string name="about_author">Authors:</string>
    <string name="about_author_names" translatable="false">Sebastian Lutz, Dominik Püllen, Simon Breitfelder</string>
    <string name="about_author_contributors">and contributors.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="privacy_friendly">This application belongs to the group of Privacy Friendly Apps developed by Technische Universität Darmstadt. Sourcecode licensed under Apache license. Images copyright TU Darmstadt and Google Inc.</string>
    <string name="more_info">More information can be found on:</string>
    <string name="github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-todo-list">Github-Repo</a></string>
    <string name="url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>
    <string name="done">done</string>
    <string name="no_todo_lists_available">No To-Do lists available.</string>
    <string name="next_deadline_dd">Next Deadline: %1$s</string>
    <string name="no_next_deadline">No upcoming deadline</string>
    <string name="add_list_feedback">%1$s added</string>
    <string name="edit_todo_list">Edit To-Do list</string>
    <string name="delete_list">Delete To-Do list</string>
    <string name="delete_list_feedback">%1$s deleted</string>
    <string name="new_todo_list">New To-Do list</string>
    <string name="list_name_must_not_be_empty">Please enter a list name.</string>
    <string name="show_description">Show description</string>
    <string name="no_description_available">No description available.</string>
    <string name="empty_todo_list">No tasks available</string>
    <string name="all_tasks">All tasks</string>
    <string name="open_tasks">Open tasks</string>
    <string name="completed_tasks">Completed tasks</string>
    <string name="group_by_priority">Group by priority</string>
    <string name="sort_by_deadline">Sort by deadline</string>
    <string name="add_subtask">Add Subtask</string>
    <string name="new_todo_task">New To-Do task</string>
    <string name="edit_todo_task">Edit To-Do task</string>
    <string name="deadline_dd">Deadline:</string>
    <string name="no_deadline">No Deadline</string>
    <string name="edit_task">Edit To-Do Task</string>
    <string name="delete_task">Delete To-Do Task</string>
    <string name="task_removed">Task put into bin</string>
    <string name="deadline">Deadline</string>
    <string name="reminder">Reminder</string>
    <string name="deadline_smaller_reminder">The deadline can not be earlier than the reminder time.</string>
    <string name="set_deadline_before_reminder">Please specify a deadline before setting the reminder time.</string>
    <string name="progress_colon">Progress:</string>
    <string name="priority_colon">Priority:</string>
    <string name="zero_percent">0%</string>
    <string name="select_priority">Select a priority:</string>
    <string name="select_list">Select a list:</string>
    <string name="new_todo_subtask">New subtask</string>
    <string name="todo_name_must_not_be_empty">Please enter a task name.</string>
    <string name="edit_subtask">Edit subtask</string>
    <string name="delete_subtask">Delete subtask</string>
    <string name="subtask_removed">Subtask successfully removed.</string>
    <string name="to_choose_list">Select a list!</string>
    <string name="click_to_choose">Click to select!</string>
    <string name="list_colon">List:</string>
    <string name="work_subtask">Work on this subtask</string>
    <string name="work_task">Work on this task</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="no_reminder">No reminder</string>
    <string name="calendar">Calendar</string>
    <string name="no_deadline_today">There are no deadlines at this day.</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="wrong_pin">Wrong PIN</string>
    <string name="reset_application_button">Reset application</string>
    <string name="invalid_pin">Please enter a PIN with 4 digits.</string>
    <string name="reset_application_msg">Do you really want to reset the application? This will remove the PIN-protection and delete all To-Do lists.</string>
    <string name="add_pin">Add a numeric PIN to provide access to enter the app. The PIN must contain at least 4 digits.</string>
    <string name="default_reminder_time">Default reminder time</string>
    <string-array name="default_reminder_times_human">
        <item>@string/no_reminder</item>
        <item>0.5 days before</item>
        <item>1 day before</item>
        <item>1.5 days before</item>
        <item>2 days before</item>
        <item>2.5 days before</item>
        <item>3 days before</item>
    </string-array>
    <string name="pin_enabled">PIN required on startup</string>
    <string name="set_pin">Set PIN</string>
    <string name="auto_progress">Progress by subtasks</string>
    <string name="notify">Enable notification sound</string>
    <string name="deadline_approaching">Deadline is approaching: %1$s</string>
    <string name="sunday_abbr">SUN</string>
    <string name="monday_abbr">MON</string>
    <string name="tuesday_abbr">TUE</string>
    <string name="wednesday_abbr">WED</string>
    <string name="thursday_abbr">THU</string>
    <string name="friday_abbr">FRI</string>
    <string name="saturday_abbr">SAT</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="january_abbr">JAN</string>
    <string name="february_abbr">FEB</string>
    <string name="march_abbr">MAR</string>
    <string name="april_abbr">APR</string>
    <string name="may_abbr">MAY</string>
    <string name="june_abbr">JUN</string>
    <string name="july_abbr">JUL</string>
    <string name="august_abbr">AUG</string>
    <string name="september_abbr">SEP</string>
    <string name="october_abbr">OCT</string>
    <string name="november_abbr">NOV</string>
    <string name="december_abbr">DEC</string>
    <string name="yesterday">yesterday</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="never">never</string>
    <string name="days">days</string>
    <string name="weeks">weeks</string>
    <string name="months">months</string>
    <string name="years">years</string>
    <string name="recurrence">Recurrence</string>
    <string name="no_recurrence">no recurrence</string>
    <string name="repeat_every">Repeat every</string>
    <string name="select_recurrence">Select recurrence</string>
    <string name="weekdays">selected weekdays</string>
    <string name="some_months">selected months</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="no_end_date">No end date</string>
    <string name="daily">daily</string>
    <string name="weekly">weekly</string>
    <string name="monthly">monthly</string>
    <string name="annual">annual</string>
    <string name="every_X_days">every %d days</string>
    <string name="every_X_weeks">every %d weeks</string>
    <string name="every_X_months">every %d months</string>
    <string name="every_X_years">every %d years</string>
    <string name="past_end_date">in the past</string>
    <string name="error_removing_subtask">Subtask could not be removed from the database.</string>
    <string name="error_removing_task">Could not remove todo task from the database.</string>
    <string name="list_to_db_error">Error while creating new To-Do list.</string>
    <string name="task_to_db_error">Error while inserting new task into the database.</string>
</resources>