<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:maxLength="@integer/max_todo_title_length"
        android:padding="20sp"
        android:text="@string/new_todo_task"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:maxLength="@integer/max_todo_title_length"
        android:padding="20sp"
        android:text="@string/edit_todo_task"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <EditText
        android:id="@+id/et_new_task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:hint="@string/name"
        android:inputType="text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <EditText
        android:id="@+id/et_new_task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/todo_list_description_hint"
        android:inputType="textMultiLine"
        android:maxLines="15"
        android:minLines="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_todo_task_deadline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:drawableStart="@android:drawable/ic_menu_my_calendar"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="@string/deadline" />

            <TextView
                android:id="@+id/tv_todo_task_reminder"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:drawableStart="@android:drawable/ic_lock_idle_alarm"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/reminder" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_todo_task_recurrence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/ic_menu_rotate"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/recurrence" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <RelativeLayout
        android:id="@+id/progress_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/tv_task_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress_colon"
            android:textSize="16sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/sb_new_task_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/tv_task_progress"
            android:max="100" />

        <TextView
            android:id="@+id/new_task_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sb_new_task_progress"
            android:layout_alignLeft="@+id/sb_new_task_progress"
            android:layout_marginLeft="15dp"
            android:text="@string/zero_percent" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:paddingTop="0dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/tv_new_task_priority_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/priority_colon"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_new_task_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_new_task_priority_str"
            android:layout_alignBottom="@+id/tv_new_task_priority_str"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="44dp"
            android:layout_toEndOf="@+id/tv_new_task_priority_str"
            android:text="@string/click_to_choose"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_new_task_listchoose_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_new_task_priority"
            android:layout_marginTop="10dp"
            android:text="@string/list_colon"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_new_task_listchoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_new_task_listchoose_str"
            android:layout_alignStart="@+id/tv_new_task_priority"
            android:layout_alignBottom="@+id/tv_new_task_listchoose_str"
            android:layout_alignParentEnd="true"
            android:text="@string/click_to_choose"
            android:textSize="16sp"
            android:textStyle="italic" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bt_new_task_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dip"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/bt_new_task_ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dip"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>