<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:maxLength="@integer/max_todo_title_length"
        android:padding="20sp"
        android:text="@string/select_recurrence"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_recurrence_increment_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:labelFor="@id/tv_recurrence_increment"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/repeat_every" />

            <EditText
                android:id="@+id/tv_recurrence_increment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:minWidth="@dimen/dots_height"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>

            <Spinner
                android:id="@+id/s_recurrence_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>
        </LinearLayout>

        <GridView
            android:id="@+id/gv_recurrence_selection"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:numColumns="auto_fit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10sp">

        <TextView
            android:id="@+id/tv_recurrence_start_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:labelFor="@id/tv_recurrence_start_date"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/start_date" />

        <TextView
            android:id="@+id/tv_recurrence_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/ic_menu_my_calendar"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/today" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10sp">

        <TextView
            android:id="@+id/tv_recurrence_end_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:labelFor="@id/tv_recurrence_end_date"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/end_date" />

        <TextView
            android:id="@+id/tv_recurrence_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/ic_menu_my_calendar"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/never"/>

        <TextView
            android:id="@+id/tv_recurrence_end_date_past_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="?android:attr/alertDialogIcon"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/invalid_time_waring"
            android:text="@string/past_end_date"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end">

        <Button
            android:id="@+id/bt_recurrence_no_recurrence"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dip"
            android:text="@string/no_recurrence" />

        <Button
            android:id="@+id/bt_recurrence_ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dip"
            android:text="@string/ok" />
    </LinearLayout>
</LinearLayout>