<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_date_time_picker_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dip"
            android:layout_weight="1"
            android:text="@string/date"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/bt_date_time_picker_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dip"
            android:layout_weight="1"
            android:text="@string/time"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_date_time_picker_date"
        android:visibility="visible"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <DatePicker
            android:id="@+id/dp_date_time_picker"
            android:layout_width="match_parent"
            android:calendarViewShown="false"
            android:spinnersShown="false"
            android:layout_weight="1"
            android:layout_height="0dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_date_time_picker_time"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TimePicker
            android:id="@+id/tp_date_time_picker"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end">

        <Button
            android:id="@+id/bt_date_time_picker_no_date_time"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:minHeight="48dip"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/bt_date_time_picker_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dip"
            android:layout_weight="1"
            android:text="@string/ok"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>